# arduinomax31865

./: CMakeLists.txt  README.md
src/: gosmax31865.cpp  gosmax31865.h
